# organizador_de_series

./: .gitignore  README.md  TODO  about.py  appicon.py  build.bat  copier.py  falta.py  file_sync.py  formats.json  ftp_manager.py  main_ui.py  makefile  mangas_ui.py  mangas_ui.pyw  move_rename.py  mvrename.py  new_main_ui.py  new_renombrar.py  options.json  parser_serie.py  pyproject.toml  renombrar.ui  setup.py  setup_old.py  stopwords.py  sync.py  utils.py  version.py
organizador/: about.py  falta.py  new_main_ui.py  new_renombrar.py  version.py
organizador/series_renamer/: __init__.py  renamer.py  scanner.py  stopwords.py  utils.py
organizador/ui/: falta.ui  main.ui  renombrar.ui
organizador/utils/: copier.py  edit_distance.py  formats.py  qt_utils.py  rename.py  resource_loader.py  sync.py
series_renamer/: __init__.py  renamer.py  scanner.py  utils.py
